<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fadingEdge="horizontal"
    android:background="@drawable/background_image">

    <TextView
        android:id="@+id/textview_text_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:gravity="center_vertical|center_horizontal"
        android:minHeight="70dp"
        android:text="@string/welcome"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin"
        android:gravity="center_vertical"
        android:orientation="vertical"
        tools:context=".AdminAppMainActivity" >

        <Button
            android:id="@+id/button_joinnetwork"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="80dip"
            android:text="@string/join_network"
            style="@style/MainButtons" />
        
        <Button
            android:id="@+id/button_polls"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="80dip"
            android:text="@string/polls"
            style="@style/MainButtons" />

        <Button
            android:id="@+id/button_archive"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="80dip"
            android:text="@string/poll_archive"
            style="@style/MainButtons" />
    </LinearLayout>

</LinearLayout>