<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/title"
        style="@style/DialogTitleStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dialog_title_margin"
        android:text="@string/network_password" >
    </TextView>

    <View
        android:id="@+id/separator_identification"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/theme_color" />
    
    <EditText
        android:id="@+id/edittext_group_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_group_name"
        android:inputType="number" />
    
    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_group_password"
        android:inputType="text" />
    
    <EditText
        android:id="@+id/edittext_networkkey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_network_wlan_key"
        android:inputType="textPassword" />

</LinearLayout>