<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textview_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:minHeight="70dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:text="@string/poll_setup"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    

    <EditText
        android:id="@+id/edittext_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_enter_question"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <CheckBox
        android:id="@+id/checkbox_emptyvote"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="6dp"
        android:gravity="center_vertical" />
    
    <ListView
        android:id="@+id/listview_pollquestions"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >
    </ListView>

    <LinearLayout
        android:id="@+id/footer"
        style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edittext_option"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/hint_enter_option"
            android:inputType="text" />

        <ImageButton
            android:id="@+id/button_addoption"
            style="@style/BorderLessButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/description_add_option"
            android:src="@drawable/ic_action_new_dark"
            android:text="@string/add" />
    </LinearLayout>

    <LinearLayout
        style="@style/ActionBar.Solid.Votebartheme"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:divider="?android:dividerVertical"
        android:dividerPadding="8dp"
        android:orientation="horizontal"
        android:showDividers="middle" >

        <!-- <Button
            android:id="@+id/button_save_poll"
            style="@style/BottomBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.18"
            android:drawableLeft="@drawable/ic_action_save"
            android:paddingLeft="16dp"
            android:paddingRight="8dp"
            android:text="@string/save" />  -->

        <Button
            android:id="@+id/button_start_poll"
            style="@style/BottomBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.18"
            android:drawableLeft="@drawable/ic_action_play"
            android:paddingLeft="8dp"
            android:paddingRight="16dp"
            android:text="@string/action_start_poll" />
    </LinearLayout>

</LinearLayout>