<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_overlay"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/overlay_margin_side"
        android:layout_marginTop="140dp"
        android:src="@drawable/arrow_up_right" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/imageView1"
        android:layout_marginTop="20dp"
        android:layout_marginRight="@dimen/overlay_margin_side"
        android:src="@drawable/arrow_left_up" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/imageView1"
        android:layout_marginBottom="24dp"
        android:layout_marginRight="@dimen/margin"
        android:layout_toRightOf="@id/imageView1"
        android:text="@string/overlay_identification"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/imageView2"
        android:layout_marginLeft="@dimen/margin"
        android:layout_toLeftOf="@id/imageView2"
        android:text="@string/overlay_network_option"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/overlay_close"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white" />

</RelativeLayout>