<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textview_text_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_green"
        android:gravity="center_vertical|center_horizontal"
        android:minHeight="70dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:text="@string/choose_network"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/textview_text_header"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/textview_identification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical"
            android:text="@string/identification" />

        <View
            android:id="@+id/separator_identification"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignBottom="@+id/textview_identification"
            android:layout_alignParentLeft="true"
            android:background="@color/light_green"
            android:gravity="center_vertical" />

        <EditText
            android:id="@+id/edittext_identification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/separator_identification"
            android:ems="10"
            android:hint="@string/your_identification"
            android:inputType="textPersonName" >
        </EditText>

        <TextView
            android:id="@+id/textview_networks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/edittext_identification"
            android:gravity="center_vertical"
            android:text="@string/networks" />

        <View
            android:id="@+id/separator_identification_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/textview_networks"
            android:background="@color/light_green"
            android:gravity="center_vertical" />

        <fragment
            android:id="@+id/fragment_network_list"
            android:name="ch.bfh.evoting.votinglib.fragment.NetworkListFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/separator_identification_2"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</RelativeLayout>